--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <h2>Sobre</h2>
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
             in iste officiis commodi quidem hic quas.</p>
         </div>
@@ -106,17 +105,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Julho 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+55 16 9 9388-4293</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Batatais, SP</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de Aniversário:</strong> <span>15 Julho 1996</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 16 9 9388-4293</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Batatais, SP</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>27</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>joaopaulovicentinistoppa@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
